@@ -4,8 +4,9 @@ import com.ust.Assessment.dto.ResponseAnswerDto;
 import com.ust.Assessment.dto.ResponseQuestionDto;
 import com.ust.Assessment.dto.ResponseSetDto;
 import com.ust.Assessment.dto.SetDto;
+import com.ust.Assessment.exception.QuestionIdNotFoundException;
+import com.ust.Assessment.exception.SetIdNotFoundException;
 import com.ust.Assessment.exception.SetNameNotFoundException;
-import com.ust.Assessment.exception.SetNotFoundException;
 import com.ust.Assessment.model.Answer;
 import com.ust.Assessment.model.Question;
 import com.ust.Assessment.model.SetInfo;
@@ -15,7 +16,6 @@ import com.ust.Assessment.repository.SetInfoRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -33,33 +33,29 @@ public class AssessmentService {
     @Autowired
     private AnswerRepository answerRepository;
 
-    // Function to map Answer to ResponseAnswerDto, now accepting questionId as a parameter
     private ResponseAnswerDto mapAnswerToDto(Answer answer, Integer questionId) {
         ResponseAnswerDto responseAnswerDto = new ResponseAnswerDto();
         responseAnswerDto.setQuestionId(questionId);
         responseAnswerDto.setAnswerId(answer.getAnswerId());
-        responseAnswerDto.setAnswer(answer.getAnswer());
+        responseAnswerDto.setAnswer(answer.getAnswerText());
         responseAnswerDto.setSuggestion(answer.getSuggestion());
         return responseAnswerDto;
     }
 
-    // Function to map Question to ResponseQuestionDto, now accepting setId as a parameter
     private ResponseQuestionDto mapQuestionToDto(Question question, Integer setId) {
         ResponseQuestionDto responseQuestionDto = new ResponseQuestionDto();
         responseQuestionDto.setSetId(setId);
         responseQuestionDto.setQuestionId(question.getQuestionId());
         responseQuestionDto.setQuestionText(question.getQuestionText());
 
-        // Map each Answer in the Question to ResponseAnswerDto, passing the questionId
         List<ResponseAnswerDto> responseAnswers = question.getAnswers().stream()
                 .map(answer -> mapAnswerToDto(answer, question.getQuestionId()))
-                .collect(Collectors.toList());
+                .toList();
 
         responseQuestionDto.setAnswers(responseAnswers);
         return responseQuestionDto;
     }
 
-    // Function to map SetInfo to ResponseSetDto
     private ResponseSetDto mapSetInfoToDto(SetInfo setInfo) {
         ResponseSetDto responseSetDto = new ResponseSetDto();
         responseSetDto.setSetId(setInfo.getSetId());
@@ -70,17 +66,15 @@ public class AssessmentService {
         responseSetDto.setDomain(setInfo.getDomain());
         responseSetDto.setStatus(setInfo.getStatus());
 
-        // Map each Question in the SetInfo to ResponseQuestionDto, passing the setId
         List<ResponseQuestionDto> responseQuestions = setInfo.getQuestions().stream()
                 .map(question -> mapQuestionToDto(question, setInfo.getSetId()))
-                .collect(Collectors.toList());
+                .toList();
 
         responseSetDto.setQuestions(responseQuestions);
         return responseSetDto;
     }
 
     public ResponseSetDto getSetBySetName(String setname)  {
-        // Retrieve all SetInfo entities from the repository
         Optional<SetInfo> setInfos = setInfoRepository.findBySetName(setname);
 
         if (setInfos.isPresent()) {
@@ -93,100 +87,20 @@ public class AssessmentService {
         else {
             throw new SetNameNotFoundException(setname);
         }
-
-
     }
     public ResponseSetDto saveSetInfo(SetInfo setInfo) {
-        // Save each question and its associated answers
         for (Question question : setInfo.getQuestions()) {
-            // Save each answer with the questionId
             for (Answer answer : question.getAnswers()) {
                 answerRepository.save(answer);
             }
-            // Save the question
             questionRepository.save(question);
         }
-        // Save the set itself
         setInfoRepository.save(setInfo);
 
-        // Map the saved SetInfo to ResponseSetDto
         return mapSetInfoToDto(setInfo);
     }
 
-//    public ResponseSetDto saveSetInfo(SetInfo setInfo) {
-//        // Save all answers, questions, and the set itself
-//        for (Question question : setInfo.getQuestions()) {
-//            for (Answer answer : question.getAnswers()) {
-//                answerRepository.save(answer);
-//            }
-//            questionRepository.save(question);
-//        }
-//        setInfoRepository.save(setInfo);
-//
-//        // Map saved SetInfo to ResponseSetDto
-//        ResponseSetDto responseSetDto = new ResponseSetDto();
-//        responseSetDto.setSetId(setInfo.getSetId());
-//        responseSetDto.setSetName(setInfo.getSetName());
-//        responseSetDto.setCreatedBy(setInfo.getCreatedBy());
-//        responseSetDto.setCreatedAt(setInfo.getCreatedAt());
-//        responseSetDto.setModifiedAt(setInfo.getModifiedAt());
-//        responseSetDto.setDomain(setInfo.getDomain());
-//        responseSetDto.setStatus(setInfo.getStatus());
-//
-//        // Convert Questions to ResponseQuestionDtos
-//        List<ResponseQuestionDto> responseQuestions = setInfo.getQuestions().stream().map(question -> {
-//            ResponseQuestionDto responseQuestionDto = new ResponseQuestionDto();
-//            responseQuestionDto.setSetId(setInfo.getSetId());
-//            responseQuestionDto.setQuestionId(question.getQuestionId());
-//            responseQuestionDto.setQuestionText(question.getQuestionText());
-//
-//            // Convert Answers to ResponseAnswerDtos
-//            List<ResponseAnswerDto> responseAnswers = question.getAnswers().stream().map(answer -> {
-//                ResponseAnswerDto responseAnswerDto = new ResponseAnswerDto();
-//                responseAnswerDto.setQuestionId(question.getQuestionId());
-//                responseAnswerDto.setAnswerId(answer.getAnswerId());
-//                responseAnswerDto.setAnswer(answer.getAnswer());
-//                responseAnswerDto.setSuggestion(answer.getSuggestion());
-//                return responseAnswerDto;
-//            }).collect(Collectors.toList());
-//
-//            responseQuestionDto.setAnswers(responseAnswers);
-//            return responseQuestionDto;
-//        }).collect(Collectors.toList());
-//
-//        responseSetDto.setQuestions(responseQuestions);
-//
-//        return responseSetDto;
-//    }
-//
-//
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    public List<SetInfo> getSetInfo() {
-        return setInfoRepository.findAll();
-    }
-
-
-//    public ResponseSetDto getSetBySetName(String setname) {
-//        return setInfoRepository.findBySetName(setname).get();
-//    }
 
     public List<SetDto> getAllSet() {
 
@@ -196,7 +110,7 @@ public class AssessmentService {
     public List<SetDto> mapSetInfoListToSetDtoList(List<SetInfo> setInfoList) {
         return setInfoList.stream()
                 .map(this::mapSetInfoToSetDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private SetDto mapSetInfoToSetDto(SetInfo setInfo) {
@@ -209,28 +123,35 @@ public class AssessmentService {
         );
     }
 
-    public Question modifySetQuestionInfo(String setName, Integer questionId, Question question) {
+    public ResponseQuestionDto modifySetQuestionInfo(Integer setId, Integer questionId, Question question) {
 
-        Optional<SetInfo> setInfo = setInfoRepository.findBySetName(setName);
-            Optional<Question> currentQuestion = questionRepository.findById(questionId);
-            if (currentQuestion.isPresent() && setInfo.isPresent()){
-                question.setQuestionId(questionId);
-                questionRepository.save(question);
-                return question;
+        Optional<SetInfo> setInfo = setInfoRepository.findById(setId);
+        Optional<Question> currentQuestion = questionRepository.findById(questionId);
+        if (currentQuestion.isPresent() && setInfo.isPresent()){
+            question.setQuestionId(questionId);
+            questionRepository.save(question);
+            ResponseQuestionDto questionDto ;
+            questionDto = mapQuestionToDto(question,setInfo.get().getSetId());
+            return questionDto;
 
-            }else {
-                throw new RuntimeException("question/set doesnt exist");
-            }
-
+        }
+        else if (setInfo.isEmpty()) {
+            throw new SetIdNotFoundException(setId);
+        } else {
+            throw new QuestionIdNotFoundException(questionId);
+        }
     }
 
-    public void deleteQuestionFromAssessment(String setName, Integer questionId) {
-        Optional<SetInfo> setInfo = setInfoRepository.findBySetName(setName);
+    public void deleteQuestionFromAssessment(Integer setId, Integer questionId) {
+        Optional<SetInfo> setInfo = setInfoRepository.findById(setId);
         Optional<Question> question = questionRepository.findById(questionId);
         if (question.isPresent() && setInfo.isPresent()){
             questionRepository.deleteById(questionId);
+        } else if (setInfo.isEmpty()) {
+            throw new SetIdNotFoundException(setId);
         } else {
-            throw new RuntimeException("question/set doesnt exist");
+            throw new QuestionIdNotFoundException(questionId);
         }
+
     }
 }
